# Sandbox-original

./: .gitignore  CMakeLists.txt  Poco_DEB_CMakeLists.txt  README.md  fakeittest.cpp
C/: ToStudy  asm.c  const.c  do  restrict.c  storage_class.c
C/division/: do  foo.c  mul.c  shift1.c  shift2.c  shift3.c  shift4.c
C/encapsulation/: ads1248.c  ads1248.h  do  main.c  private_funct.c  private_funct.h  private_var.c  private_var.h
C/restrict/: foo.c  rfoo.c
Circular/: do  doer.cpp  doer.hpp  main.cpp  thinker.cpp  thinker.hpp
Devirtualise/: .gitignore  A.hpp  do  final_class.cpp  final_method.cpp  methods.cpp
GCC/: .gitignore  analysis.sh  do  main.c  main_macro.cpp
IPC/: CMakeLists.txt  IpcService.hpp  broker.cpp  fake_cpp11.hpp  main.cpp  options.hpp  receiver.cpp  reciever.cpp  sender.cpp
JenkinsTest/: .gitignore  build.gradle  buildWrapper.groovy  test1.groovy
JenkinsTest/src/: getBuildTag.groovy
JenkinsTest/src/test/groovy/: GetBuildTagTest.groovy
Kahn/: do  kahn.cpp  kahn.hpp  main.cpp
LKM/: Makefile  cdc-qmm.c  cdc-qmm.h  cdc-qmm.ko  cdc-qmm.mod  cdc-qmm.mod.c  usb-serial.c  usblcd.c  usbqmm.c
LTO/: .gitignore  CMakeLists.txt  do  donothing.cpp  main.cpp
Rust/: test.rs
Sanitiser/: .gitignore  do  thread_no_race.c
TestSubstitution/: .gitignore  FakeRandomMinute.cpp  main.cpp
TestSubstitution/weakAlias/: do  example.h  main.cpp  override.cpp
TestSubstitution/wrap/: FakeRandomMinute.cpp  FakeSomeClassValue.cpp  RandomMinute.cpp  RandomMinute.h  SomeClass.cpp  SomeClass.hpp  do  main.cpp
Threading/: README  argPassingThreads.cpp  asynchro.cpp  dataRace.cpp  eventHandler.cpp  theFuture.cpp  threads.cpp
Time/: do  main.cpp  time.py
armDocker/: do  do2
b-tree/: main.cpp
base64/: do  main.cpp
cython/: ofirst.pyx  original.py  setup.py  simple.pyx
docker/: Dockerfile  do
fuzz/: do  fpfuzzing.cpp  fuzzy.py
fuzz/python/: example.py  example2.py
modernescpp/threads/: async.cpp  blocking.cpp  notBlocking.cpp  promiseFuture.cpp  promiseFutureSynchronise.cpp
prof/: .gitignore  analysis.txt  do
rop/: .gitignore  do  gadget.c  hello_world.c  notUsed.c  pyExample4.py
scripts/: testSystemd
vhdl/: adder.vcd  adder.vhdl  adder_tb.vhdl  hello.vhdl  work-obj93.cf
vivonomicon/Part1/: .gitignore  CMakeLists.txt  STM32F303VCT6.ld  core.S  do  do2
vivonomicon/Part2/: Makefile  STM32F303VCT6.ld  core.S  main.c  vector_table.S
vivonomicon/Part3/ld/: STM32F303VCT6.ld
weakLink/: .gitignore  do  do2  main.cpp  main_simple.cpp  power.cpp  power_slow.cpp  power_slow.hpp  simple.hpp  simple_strong.c  simple_strong.cpp  simple_weak.cpp
